--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -32,15 +32,13 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Belajar Spring Vault</a>
+        <a class="navbar-brand" th:href="@{/}">Belajar Spring Vault</a>
     </div>
 </nav>
 
 <main class="container">
-    <div class="bg-light p-5 rounded">
-        <section layout:fragment="content">
-        </section>
-    </div>
+    <section layout:fragment="content">
+    </section>
 </main>
 </body>
 </html>
