--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,7 +49,7 @@
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Input Data Pribadi Anda</h1>
                     <p class="col-md-8 fs-4">Dalam aplikasi ini, kita bisa melihat cara enkripsi data pribadi berupa NIK dan scan KTP</p>
-                    <a th:href="@{/data/form}" class="btn btn-primary btn-lg" role="button">Input Data</a>
+                    <a th:href="@{/member/form}" class="btn btn-primary btn-lg" role="button">Input Data</a>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                             </code>
                         </p>
                         <p>
-                            <a th:href="@{/data/view}" class="btn btn-outline-light" role="button">Lihat Data</a>
+                            <a th:href="@{/member/list}" class="btn btn-outline-light" role="button">Lihat Data</a>
                         </p>
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                             </code>
                         </p>
                         <p>
-                            <a th:href="@{/data/view}" class="btn btn-outline-secondary" role="button">Lihat Data</a>
+                            <a th:href="@{/member/list}" class="btn btn-outline-secondary" role="button">Lihat Data</a>
                         </p>
                     </div>
                 </div>
