implement encrypted member service

--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -19,7 +19,7 @@
                  th:src="@{/member/{memberId}/ktp(memberId=${member.id})}">
             <div class="card-body">
                 <h5 class="card-title" th:text="${'Nama : ' + member.nama}">Card title</h5>
-                <p class="card-text" th:text="${'No. KTP : ' + member.noKtp}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text" th:text="${'No. KTP : ' + member.noKtpPlain}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
     </div>
