fix lokasi template

--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"" th:fragment="layout (title, content)" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" th:fragment="layout (title, content)" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +32,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">Belajar Spring Vault</a>
+        <a class="navbar-brand" th:href="@{/}">Belajar Enkripsi Data</a>
     </div>
 </nav>
 
