implement enkripsi local dengan AES

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,6 +75,13 @@
                         <p>
                             Gunakan perintah berikut untuk menjalankan aplikasi <strong>dengan</strong> enkripsi
                         </p>
+                        <h5>Enkripsi local dengan AES</h5>
+                        <p>
+                            <code>
+                                SPRING_PROFILES_ACTIVE=aeslocal mvn clean spring-boot:run
+                            </code>
+                        </p>
+                        <h5>Encryption as a Service dengan Vault</h5>
                         <p>
                             <code>
                                 SPRING_PROFILES_ACTIVE=vault mvn clean spring-boot:run
